added web development pages

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <nav class="navbar navbar-absolute-dark">
             <!-- add 'navbar-dark/navbar-grey/navbar-transparent/navbar-transparent-dark' -->
             <div class="container">
-                <a class="navbar-brand" href="#">
-                    <h5>Andreina's Portfolio</h5>
+                <a class="navbar-brand" href="./index.html">
+                    <h5>The Andreina</h5>
                 </a>
                 <!-- Toggle button of Fullscreen menu -->
                 <button class="fullscreen-toggle-btn">
@@ -39,23 +39,18 @@
         <div class="fullscreen-menu">
             <div class="fullscreen-menu-wrapper text-center">
                 <div class="position-top">
-                    <h4>Andreina's Portfolio</h4>
+                    <h4>The Andreina</h4>
                 </div>
                 <div class="position-middle">
                     <ul>
                         <li>
-                            <a href="#">
+                            <a href="./index.html">
                                 <h2>Home</h2>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="./about.html">
                                 <h2>About</h2>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <h2>Portfolio</h2>
                             </a>
                         </li>
                     </ul>
@@ -63,17 +58,17 @@
                 <div class="position-bottom">
                     <ul class="list-horizontal-unstyled icon-lg">
                         <li>
-                            <a href="#">
+                            <a href="https://www.github.com/coolcaliente" target="blank">
                                 <i class="fab fa-github-alt"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="https://www.linkedin.com/in/andreina-keller" target="blank">
                                 <i class="fab fa-linkedin"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="https://www.instagram.com/coolcaliente/" target="blank">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </li>
@@ -90,9 +85,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2">
-                        <h2 class="margin-bottom-20">Welcome to my work</h2>
-                        <h5 class="font-weight-thin no-margin">I am a Full Stack Developer and Graphic designer living in Houston Texas. I believe informed design
-                            decisions and cheese are the answers to most dilemmas.</h5>
+                        <h2 class="margin-bottom-20">Welcome to my Portfolio</h2>
+                        <h5 class="font-weight-thin no-margin">I am a Full Stack Developer and Visual Designer living in
+                            Houston, Texas. I believe in educated design decisions and caffeine.</h5>
                     </div>
                 </div>
                 <!-- end row -->
@@ -119,10 +114,10 @@
                 <div class="portfolio-item category-1">
                     <div class="portfolio-box">
                         <div class="portfolio-img">
-                            <img src="./assets/images/col-2-square.jpg" alt="">
+                            <img src="./assets/images/stockmarketpets.jpg" alt="">
                             <!-- Image source -->
                         </div>
-                        <a href="#"></a>
+                        <a href="./stockmarketpets.html"></a>
                         <!-- Portfolio Single link -->
                         <div class="portfolio-title">
                             <div>
@@ -132,48 +127,31 @@
                         </div>
                     </div>
                 </div>
-                <!-- Portfolio box 2 -->
-                <div class="portfolio-item category-2">
-                    <div class="portfolio-box">
-                        <div class="portfolio-img">
-                            <img src="./assets/images/col-2.jpg" alt="">
-                            <!-- Image source -->
-                        </div>
-                        <a href="#"></a>
-                        <!-- Portfolio Single link -->
-                        <div class="portfolio-title">
-                            <div>
-                                <h5>Project Title</h5>
-                                <span>Category</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <!-- Portfolio box 3 -->
-                <div class="portfolio-item category-3">
+                <!-- <div class="portfolio-item category-3">
                     <div class="portfolio-box">
                         <div class="portfolio-img">
-                            <img src="./assets/images/col-2-square.jpg" alt="">
+                            <img src="./assets/images/GEI_logo.jpg" alt=""> -->
                             <!-- Image source -->
-                        </div>
-                        <a href="#"></a>
+                        <!-- </div>
+                        <a href="./gulfenergyinfo.html"></a> -->
                         <!-- Portfolio Single link -->
-                        <div class="portfolio-title">
+                        <!-- <div class="portfolio-title">
                             <div>
                                 <h5>Gulf Energy Information</h5>
                                 <span>Logo</span>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Portfolio box 4 -->
                 <div class="portfolio-item category-1">
                     <div class="portfolio-box">
                         <div class="portfolio-img">
-                            <img src="./assets/images/col-2-square.jpg" alt="">
+                            <img src="./assets/images/plantos.jpg" alt="">
                             <!-- Image source -->
                         </div>
-                        <a href="#"></a>
+                        <a href="./plantos.html"></a>
                         <!-- Portfolio Single link -->
                         <div class="portfolio-title">
                             <div>
@@ -183,31 +161,14 @@
                         </div>
                     </div>
                 </div>
-                <!-- Portfolio box 5 -->
-                <div class="portfolio-item category-2">
-                    <div class="portfolio-box">
-                        <div class="portfolio-img">
-                            <img src="./assets/images/col-2.jpg" alt="">
-                            <!-- Image source -->
-                        </div>
-                        <a href="#"></a>
-                        <!-- Portfolio Single link -->
-                        <div class="portfolio-title">
-                            <div>
-                                <h5>Project Title</h5>
-                                <span>Category</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <!-- Portfolio box 6 -->
                 <div class="portfolio-item category-1">
                     <div class="portfolio-box">
                         <div class="portfolio-img">
-                            <img src="./assets/images/col-2-square.jpg" alt="">
+                            <img src="./assets/images/takeahike.jpg" alt="">
                             <!-- Image source -->
                         </div>
-                        <a href="#"></a>
+                        <a href="./takeahike.html"></a>
                         <!-- Portfolio Single link -->
                         <div class="portfolio-title">
                             <div>
@@ -221,10 +182,10 @@
                 <div class="portfolio-item category-1">
                     <div class="portfolio-box">
                         <div class="portfolio-img">
-                            <img src="./assets/images/col-2-square.jpg" alt="">
+                            <img src="./assets/images/arresteddevelopmentgame.jpg" alt="">
                             <!-- Image source -->
                         </div>
-                        <a href="#"></a>
+                        <a href="./arresteddevelopmentgame.html"></a>
                         <!-- Portfolio Single link -->
                         <div class="portfolio-title">
                             <div>
@@ -234,82 +195,14 @@
                         </div>
                     </div>
                 </div>
-                <!-- Portfolio box 8 -->
-                <div class="portfolio-item category-1">
-                    <div class="portfolio-box">
-                        <div class="portfolio-img">
-                            <img src="./assets/images/col-2.jpg" alt="">
-                            <!-- Image source -->
-                        </div>
-                        <a href="#"></a>
-                        <!-- Portfolio Single link -->
-                        <div class="portfolio-title">
-                            <div>
-                                <h5>Psychic Game</h5>
-                                <span>Web Development</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Portfolio box 9 -->
-                <div class="portfolio-item category-1">
-                    <div class="portfolio-box">
-                        <div class="portfolio-img">
-                            <img src="./assets/images/col-2.jpg" alt="">
-                            <!-- Image source -->
-                        </div>
-                        <a href="#"></a>
-                        <!-- Portfolio Single link -->
-                        <div class="portfolio-title">
-                            <div>
-                                <h5>Gem Collector</h5>
-                                <span>Web Development</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Portfolio box 10 -->
-                <div class="portfolio-item category-1">
-                    <div class="portfolio-box">
-                        <div class="portfolio-img">
-                            <img src="./assets/images/col-2.jpg" alt="">
-                            <!-- Image source -->
-                        </div>
-                        <a href="#"></a>
-                        <!-- Portfolio Single link -->
-                        <div class="portfolio-title">
-                            <div>
-                                <h5>Banana Trivia</h5>
-                                <span>Web Development</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Portfolio box 11 -->
-                <div class="portfolio-item category-1">
-                    <div class="portfolio-box">
-                        <div class="portfolio-img">
-                            <img src="./assets/images/col-2.jpg" alt="">
-                            <!-- Image source -->
-                        </div>
-                        <a href="#"></a>
-                        <!-- Portfolio Single link -->
-                        <div class="portfolio-title">
-                            <div>
-                                <h5>Train Routes</h5>
-                                <span>Web Development</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <!-- Portfolio box 12 -->
                 <div class="portfolio-item category-1">
                     <div class="portfolio-box">
                         <div class="portfolio-img">
-                            <img src="./assets/images/col-2.jpg" alt="">
+                            <img src="./assets/images/friendfinder.jpg" alt="">
                             <!-- Image source -->
                         </div>
-                        <a href="#"></a>
+                        <a href="./friendfinder.html"></a>
                         <!-- Portfolio Single link -->
                         <div class="portfolio-title">
                             <div>
@@ -319,7 +212,24 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                <!-- Portfolio box 13 -->
+                <!-- <div class="portfolio-item category-3">
+                    <div class="portfolio-box">
+                        <div class="portfolio-img">
+                            <img src="./assets/images/col-2.jpg" alt=""> -->
+                            <!-- Image source -->
+                        <!-- </div>
+                        <a href="#"></a> -->
+                        <!-- Portfolio Single link -->
+                        <!-- <div class="portfolio-title">
+                            <div>
+                                <h5>Logo</h5>
+                                <span>Logo</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
             <!-- end portfolio-wrapper-->
         </div>
         <!-- end container -->
@@ -330,30 +240,28 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-12">
-                    <h3 class="margin-bottom-20">Any Questions?</h3>
-                    <p>Maecenas nec odio et ante tincidunt tempus. Nullam quis ante. Etiam sit amet orci eget eros faucibus
-                        tincidunt.
+                    <h3 class="margin-bottom-20">Questions?</h3>
+                    <p>Feel free to contact me via email or phone.
                     </p>
-                    <a class="button button-lg button-rounded button-dark button-hover-float button-hover-shadow margin-top-30" href="#">Get In Touch</a>
 
                 </div>
                 <!-- Icon text box 1 -->
                 <div class="col-12 col-sm-6 col-md-4 icon-3xl">
                     <i class="ti ti-email text-dark margin-bottom-20"></i>
                     <h6 class="heading-uppercase no-margin">Email</h6>
-                    <p>contact@email.com</p>
+                    <p>AndreinaKeller@gmail.com</p>
                 </div>
                 <!-- Icon text box 2 -->
                 <div class="col-12 col-sm-6 col-md-4 icon-3xl">
                     <i class="ti ti-mobile text-dark margin-bottom-20"></i>
                     <h6 class="heading-uppercase no-margin">Phone</h6>
-                    <p>+(987) 654 321 01</p>
+                    <p>(281) 705-8726</p>
                 </div>
                 <!-- Icon text box 3 -->
                 <div class="col-12 col-sm-6 col-md-4 icon-3xl">
                     <i class="ti ti-location-pin text-dark margin-bottom-20"></i>
-                    <h6 class="heading-uppercase no-margin">Address</h6>
-                    <p>121 King St, Melbourne VIC 3000</p>
+                    <h6 class="heading-uppercase no-margin">Location</h6>
+                    <p>Houston, Texas</p>
                 </div>
             </div>
             <!-- end row -->
@@ -372,18 +280,18 @@
                     <div class="col-12 col-md-6 text-center text-md-right">
                         <ul class="list-horizontal-unstyled">
                             <li>
-                                <a href="#">
-                                    <i class="fab fa-github-alt"></i>
+                                <a href="https://www.github.com/coolcaliente" target="blank">
+                                    <i class="fab fa-github-alt social"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <i class="fab fa-linkedin"></i>
+                                <a href="https://www.linkedin.com/in/andreina-keller" target="blank">
+                                    <i class="fab fa-linkedin social"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <i class="fab fa-instagram"></i>
+                                <a href="https://www.instagram.com/coolcaliente/" target="blank">
+                                    <i class="fab fa-instagram social"></i>
                                 </a>
                             </li>
                         </ul>
