--- a/plantos.html
+++ b/plantos.html
@@ -100,13 +100,12 @@
                     <ul class="list-unstyled">
                         <h4>Plantos</h4>
                         <div class="margin-bottom-30">
-                            <p>Plantos is a schduler for watering your plants. Search for plants in our database or enter
-                                in your own and each plant's water needs are set into your scheudule to send you reminders.
-                                Never forget your plants again!</p>
+                            <p>Plantos is a scheduler for watering your plants.</p>
+                            <p>I developed the logo, look, feel and interface by creating mood boards, design mockups and then executing the design mock ups into code.</p>
                         </div>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Sitemap, design mock ups, JavaScript,Node, Express, NPM Packages, MySQL, Sequelize, Passport, Moment.js, Handlebars, Heroku, Bootstrap, HTML5, SCSS, Media Queries, Adobe Illustrator</span>
+                            <span>Sitemap, design mock ups, JavaScript, Node, Express, NPM Packages, MySQL, Sequelize, Passport, Moment.js, Handlebars, Heroku, Bootstrap, HTML5, SCSS, Media Queries, Adobe Illustrator</span>
                         </li>
                         <li>
                             <h6 class="heading-uppercase no-margin">Project Links</h6>
@@ -131,6 +130,9 @@
                         <!-- Slider box 1 -->
                         <div>
                             <img src="./assets/images/plantos-lg.jpg" alt="mock up of plantos web app in a white macbook laptop with white background behind it.">
+                        </div>
+                        <div>
+                            <img src="./assets/images/plantos-lg-logo.jpg" alt="plantos logo on white background.">
                         </div>
                         <div>
                             <img src="./assets/images/plantos-moodboard.jpg" alt="mood board of plantos.">
