--- a/stockmarketpets.html
+++ b/stockmarketpets.html
@@ -101,10 +101,11 @@
                         <h4>Stock Market Pets</h4>
                         <div class="margin-bottom-30">
                             <p>A virtual pet stock market game.</p>
+                            <p>I acted as project manager for this two week sprint project. I designed the logo, look and feel of the web app by creating mood boards, wireframes, and site mockups. Finally, I used React to code common components</p>
                         </div>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>I created site map, wireframes, design mockups and coded using React, Reactstrap, SASS, SCSS, Media Queries, Bootstrap, HTML5, Github, Adobe Illustrator</span>
+                            <span>Site map, wireframes, design mockups, mood boards, React, Reactstrap, SASS, SCSS, Media Queries, Bootstrap, HTML5, Github, Adobe Illustrator</span>
                         </li>
                         <li>
                             <h6 class="heading-uppercase no-margin">Project Links</h6>
@@ -115,7 +116,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="http://www.stockmarketpets.com/petfolio" target="blank">
+                                    <a href="http://dev.stockmarketpets.com" target="blank">
                                         <i class="fas fa-desktop social"></i>
                                     </a>
                                 </li>
@@ -125,10 +126,14 @@
                 </div>
                 <!-- Portfolio Content -->
                 <div class="col-12 col-lg-9">
-                    <div class="owl-carousel owl-nav-overlay owl-dots-overlay owl-dots-right" data-owl-items="1" data-owl-nav="true" data-owl-autoplay="true">
+                    <div class="owl-carousel owl-nav-overlay owl-dots-overlay owl-dots-right" data-owl-items="1"
+                        data-owl-nav="true" data-owl-autoplay="true">
                         <!-- Slider box 1 -->
                         <div>
                             <img src="./assets/images/stockmarketpets-lg.jpg" alt="mock up of stoc kmarket pets web app in a white macbook laptop with white background behind it.">
+                        </div>
+                        <div>
+                            <img src="./assets/images/stockmarketpets-lg-logo.jpg" alt="stock market logo design.">
                         </div>
                         <div>
                             <img src="./assets/images/stockmarket-moodboard.jpg" alt="the mood board for stockmarket pets, showing font, color and image choices.">
