--- a/takeahike.html
+++ b/takeahike.html
@@ -101,6 +101,7 @@
                         <h4>Take a Hike</h4>
                         <div class="margin-bottom-30">
                             <p>An app that helps people find local hikes.</p>
+                            <p>I developed the logo, look, feel and interface by creating mood boards, design mockups and then executing the design mock ups into code.</p>
                         </div>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
@@ -130,6 +131,9 @@
                         <!-- Slider box 1 -->
                         <div>
                             <img src="./assets/images/takeahike-lg.jpg" alt="mock up of take a hike web app in a white macbook laptop with white background behind it.">
+                        </div>
+                        <div>
+                            <img src="./assets/images/takeahike-lg-logo.jpg" alt="design mockups of take a hike.">
                         </div>
                         <div>
                             <img src="./assets/images/takeahike-mockup.jpg" alt="design mockups of take a hike.">
