--- a/wo-mediakit.html
+++ b/wo-mediakit.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>Gulf Energy Information</title>
+    <title>World Oil Media Kit</title>
     <!-- Favicon -->
     <link href="./assets/images/favicon.png" rel="shortcut icon">
     <!-- CSS -->
@@ -98,11 +98,10 @@
                 <!-- Sidebar -->
                 <div class="col-12 col-lg-3">
                     <ul class="list-unstyled">
-                        <h4>Gulf Energy Information Rebrand
+                        <h4>World Oil Media Kit
                         </h4>
                         <div class="margin-bottom-30">
-                            <p>Gulf Energy Information, formally Gulf Publishing Company, sought to rebrand to reflect its move toward the digital realm and not just traditional print. The decision was made in early 2018, with the goal to unveil the new logo at the 2018 OTC conference in April. The timeline was tight, however I was able to rise to the challenge, creating the logo and all necessary assets, including business cards, signage, ads, brochure, letterhead and booth graphics. </p>
-                            <p>The mark itself leans slightly to the right, representing forward movement and vision. The "i" representing "information" is the universal symbol for the word and is often found on digital interfaces. Of the dozens of designs, this was selected by management for its modern feel and embodiment of managements new goals.</p>
+                            <p>The 2019 edition of the annual World Oil media kit.</p>
                         </div>
                         <li>
                             <h6 class="heading-uppercase no-margin">Company</h6>
@@ -110,31 +109,32 @@
                         </li>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Adobe Illustrator</span>
+                            <span>Adobe Indesign, Adobe Photoshop, Adobe Illustrator</span>
                         </li>
                     </ul>
                 </div>
                 <!-- Portfolio Content -->
                 <div class="col-12 col-lg-9">
-                    <div class="owl-carousel owl-nav-overlay owl-dots-overlay owl-dots-right" data-owl-items="1" data-owl-nav="true" data-owl-autoplay="true">
+                    <div class="owl-carousel owl-nav-overlay owl-dots-overlay owl-dots-right" data-owl-items="1"
+                        data-owl-nav="true" data-owl-autoplay="true">
                         <!-- Slider box 1 -->
 
                         <div>
-                            <img src="./assets/images/GEI_large-two.jpg" alt="mock up of plantos web app in a white macbook laptop with white background behind it.">
+                            <img src="./assets/images/WOmediakit-lg-cover.jpg" alt="Media Kit cover and first two pages.">
+
+                        </div>
+
+                        <div>
+                            <img src="./assets/images/WOmediakit-lg-circ.jpg" alt="WO Media Kit mock up of circulaiton pages.">
 
                         </div>
                         <div>
-                            <img src="./assets/images/GEI_large-brochure.jpg" alt="mock up of plantos web app in a white macbook laptop with white background behind it.">
+                            <img src="./assets/images/WOmediakit-lg-advert.jpg" alt="WO Media Kit mock up of display ads page.">
 
                         </div>
                         <div>
-                            <img src="./assets/images/GEI_large-poster.jpg" alt="mock up of plantos web app in a white macbook laptop with white background behind it.">
-                        </div>
-                        <div>
-                            <img src="./assets/images/GEI_large-card.jpg" alt="mock up of plantos web app in a white macbook laptop with white background behind it.">
-                        </div>
-                        <div>
-                            <img src="./assets/images/GEI_large-booth.jpg" alt="mock up of plantos web app in a white macbook laptop with white background behind it.">
+                            <img src="./assets/images/WOmediakit-lg-email.jpg" alt="WO Media Kit mock up of email page.">
+
                         </div>
                     </div>
                 </div>
