--- a/hallobaloo.html
+++ b/hallobaloo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>Gulf Energy Information</title>
+    <title>Hallobaloo </title>
     <!-- Favicon -->
     <link href="./assets/images/favicon.png" rel="shortcut icon">
     <!-- CSS -->
@@ -98,43 +98,54 @@
                 <!-- Sidebar -->
                 <div class="col-12 col-lg-3">
                     <ul class="list-unstyled">
-                        <h4>Gulf Energy Information Rebrand
+                        <h4>Hallobaloo Music Festival
                         </h4>
                         <div class="margin-bottom-30">
-                            <p>Gulf Energy Information, formally Gulf Publishing Company, sought to rebrand to reflect its move toward the digital realm and not just traditional print. The decision was made in early 2018, with the goal to unveil the new logo at the 2018 OTC conference in April. The timeline was tight, however I was able to rise to the challenge, creating the logo and all necessary assets, including business cards, signage, ads, brochure, letterhead and booth graphics. </p>
-                            <p>The mark itself leans slightly to the right, representing forward movement and vision. The "i" representing "information" is the universal symbol for the word and is often found on digital interfaces. Of the dozens of designs, this was selected by management for its modern feel and embodiment of managements new goals.</p>
+                            <p>A Halloween music festival in Honolulu, Hawaii. I designed the logo and brand materials
+                                including posters, flyers, web design, web banners, t-shirts, and signage.</p>
                         </div>
                         <li>
                             <h6 class="heading-uppercase no-margin">Company</h6>
-                            <span>Gulf Energy Information</span>
+                            <span>Wall to Wall Studios</span>
                         </li>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Adobe Illustrator</span>
+                            <span>Adobe Illustrator, Adobe Photoshop, Adobe Indesign</span>
+                        </li>
+                        <li class="margin-bottom-20">
+                            <h6 class="heading-uppercase no-margin">Award</h6>
+                            <span><a href="http://winners.aigahonolulu.org/hallowbaloo-website" target="_blank">Hawaii
+                                    5-0 Design Award</a>
+                            </span>
                         </li>
                     </ul>
                 </div>
                 <!-- Portfolio Content -->
                 <div class="col-12 col-lg-9">
-                    <div class="owl-carousel owl-nav-overlay owl-dots-overlay owl-dots-right" data-owl-items="1" data-owl-nav="true" data-owl-autoplay="true">
+                    <div class="owl-carousel owl-nav-overlay owl-dots-overlay owl-dots-right" data-owl-items="1"
+                        data-owl-nav="true" data-owl-autoplay="true">
                         <!-- Slider box 1 -->
 
                         <div>
-                            <img src="./assets/images/GEI_large-two.jpg" alt="mock up of plantos web app in a white macbook laptop with white background behind it.">
+                            <img src="./assets/images/hallobaloo-lg-logo.jpg" alt="Hallobaloo logo">
 
                         </div>
                         <div>
-                            <img src="./assets/images/GEI_large-brochure.jpg" alt="mock up of plantos web app in a white macbook laptop with white background behind it.">
+                            <img src="./assets/images/hallobaloo-lg-website.jpg" alt="hallobaloo website mockup.">
 
                         </div>
                         <div>
-                            <img src="./assets/images/GEI_large-poster.jpg" alt="mock up of plantos web app in a white macbook laptop with white background behind it.">
+                            <img src="./assets/images/hallobaloo-lg-website-alt.jpg" alt="hallobaloo website mockup.">
+
                         </div>
                         <div>
-                            <img src="./assets/images/GEI_large-card.jpg" alt="mock up of plantos web app in a white macbook laptop with white background behind it.">
+                            <img src="./assets/images/hallobaloo-lg-shirt.jpg" alt="staff t-shirt mockup.">
                         </div>
                         <div>
-                            <img src="./assets/images/GEI_large-booth.jpg" alt="mock up of plantos web app in a white macbook laptop with white background behind it.">
+                            <img src="./assets/images/hallobaloo-lg-poster.jpg" alt="hallobaloo poster.">
+                        </div>
+                        <div>
+                            <img src="./assets/images/hallobaloo-lg-webbanners.jpg" alt="mix of hallobaloo web banners.">
                         </div>
                     </div>
                 </div>
