updated graphic elements

--- a/arresteddevelopmentgame.html
+++ b/arresteddevelopmentgame.html
@@ -29,7 +29,7 @@
 			<!-- add 'navbar-dark/navbar-grey/navbar-transparent/navbar-transparent-dark' -->
 			<div class="container">
 				<a class="navbar-brand" href="./index.html">
-					<h5>The Andreina</h5>
+                    <img src="./assets/images/theandreina_logo-01.svg" alt="the andreina script writing logo">
 				</a>
 				<!-- Toggle button of Fullscreen menu -->
 				<button class="fullscreen-toggle-btn">
