--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Fonts/Icons -->
     <link href="./assets/plugins/font-awesome/css/all.css" rel="stylesheet">
     <link href="./assets/plugins/themify/themify-icons.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Signika:300" rel="stylesheet">
 </head>
 
 <body data-preloader="2">
@@ -27,7 +28,7 @@
             <!-- add 'navbar-dark/navbar-grey/navbar-transparent/navbar-transparent-dark' -->
             <div class="container">
                 <a class="navbar-brand" href="./index.html">
-                    <h5>The Andreina</h5>
+                    <img src="./assets/images/theandreina_logo-01.svg" alt="the andreina script writing logo">
                 </a>
                 <!-- Toggle button of Fullscreen menu -->
                 <button class="fullscreen-toggle-btn">
@@ -85,10 +86,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2">
-                        <h2 class="margin-bottom-20">Welcome to my Portfolio</h2>
-                        <h5 class="font-weight-thin no-margin">I am a Full Stack Developer and Visual Designer living
-                            in
-                            Houston, Texas. I believe in educated design decisions and caffeine.</h5>
+                        <!-- <h2 class="margin-bottom-20">Welcome to my Portfolio</h2> -->
+                        <img src="./assets/images/theandreina_logo-01.svg" alt="the andreina script writing logo" class="hero-logo">
+                        <h5 class="font-weight-thin no-margin">Welcome to my portfolio! I am a Visual Designer and Full Stack Developer. I believe in educated design decisions and the power of caffeine.</h5>
                     </div>
                 </div>
                 <!-- end row -->
@@ -434,7 +434,7 @@
         </div>
         <!-- end Portfolio section -->
 
-        <div class="section-lg bg-grey">
+        <div class="section-lg bg-dark">
             <div class="container text-center">
                 <div class="row">
                     <div class="col-12">
@@ -445,19 +445,19 @@
                     </div>
                     <!-- Icon text box 1 -->
                     <div class="col-12 col-sm-6 col-md-4 icon-3xl">
-                        <i class="ti ti-email text-dark margin-bottom-20"></i>
+                        <i class="ti ti-email text-light margin-bottom-20"></i>
                         <h6 class="heading-uppercase no-margin">Email</h6>
                         <p>AndreinaKeller@gmail.com</p>
                     </div>
                     <!-- Icon text box 2 -->
                     <div class="col-12 col-sm-6 col-md-4 icon-3xl">
-                        <i class="ti ti-mobile text-dark margin-bottom-20"></i>
+                        <i class="ti ti-mobile text-light margin-bottom-20"></i>
                         <h6 class="heading-uppercase no-margin">Phone</h6>
                         <p>(281) 705-8726</p>
                     </div>
                     <!-- Icon text box 3 -->
                     <div class="col-12 col-sm-6 col-md-4 icon-3xl">
-                        <i class="ti ti-location-pin text-dark margin-bottom-20"></i>
+                        <i class="ti ti-location-pin text-light margin-bottom-20"></i>
                         <h6 class="heading-uppercase no-margin">Location</h6>
                         <p>Houston, Texas</p>
                     </div>
